--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -15,7 +15,8 @@ $grey: #BABABA
         justify-content: space-between
         align-items: center
     &__block
-        max-width: 690px
+        max-width: 670px
+        margin-right: 20px
         margin-top: 100px
     &__title
         font-size: 80px 
@@ -40,6 +41,11 @@ $grey: #BABABA
     width: 100%
     background: #fff
     align-items: center
+    overflow: hidden    
+    &__humburger
+        display: none
+    &__mobile
+        display: none
     &__list
         display: flex
         height: 100%
@@ -48,6 +54,8 @@ $grey: #BABABA
             font-size: 20px
             padding: 9px 20px
             transition: .3s ease
+            a
+                color: #000000
             &:hover
                 cursor: pointer
                 background: $yellow
@@ -292,6 +300,7 @@ $grey: #BABABA
             margin-left: 30px
             text-align: left
             width: 100%
+            margin-bottom: 0
 
 // Гарантії
 
