Добавление блока с новыми вакансиями

--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -183,6 +183,22 @@
                 auto
                 margin-top: 20px
                 padding: 12px 60px
+    .new
+        &__block
+            display: flex
+            flex-direction: column
+        &__text
+            font-size: 20px
+        &__item
+            &--hide
+                display: none
+        &__social
+            svg
+                width: 60px 
+                height: 60px
+            &--bottom
+                img
+                    height: 60px
     .work
         padding: 50px 0
         &__block
@@ -197,6 +213,7 @@
                 margin-left: 20px
                 font-size: 18px
                 margin-bottom: 0
+                line-height: 120%
     .review
         padding: 60px 0
         .prev-arrow
@@ -401,6 +418,15 @@
                 height: 54px
                 margin-top: 20px
                 padding: 12px 60px
+    .new
+        &__block
+            display: flex
+            flex-direction: column
+        &__text
+            font-size: 20px
+        &__item
+            &--hide
+                display: none
     .work
         padding: 60px 0
         &__block
@@ -413,6 +439,7 @@
             span
                 margin-left: 20px
                 font-size: 22px
+                line-height: 120%
                 margin-bottom: 0
     .review
         padding: 60px 0
@@ -545,6 +572,15 @@
                 padding: 8px 18px
             &__btn
                 height: 54px
+    .new
+        &__block
+            display: flex
+            flex-direction: column
+        &__text
+            font-size: 24px
+        &__item
+            &--hide
+                display: none
     .work
         padding: 60px 0
         &__item
