--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -19,7 +19,7 @@ $grey: #BABABA
         margin-right: 20px
         margin-top: 100px
     &__title
-        font-size: 80px 
+        font-size: 78px 
         color: #ffffff
         margin-bottom: 35px
         text-align: left
@@ -274,6 +274,35 @@ $grey: #BABABA
             margin-bottom: 0
             display: block
             margin-top: auto
+
+// Ознайомитись з новими вакансіями
+
+.new
+    padding: 60px 0
+    &__title
+        max-width: 550px
+    &__block
+        display: grid
+        grid-template-columns: 1fr 1fr
+        margin-top: 40px
+    &__text
+        font-size: 26px
+        max-width: 450px
+        margin: 0 auto
+        text-align: center
+    &__social
+        display: flex
+        justify-content: space-between
+        max-width: 400px
+        margin: 0 auto
+        margin-top: 50px
+        &--bottom
+            display: flex
+            justify-content: space-around
+            max-width: 280px
+            margin: 0 auto
+            margin-top: 20px
+            
 
 // Як ми працюємо?
 
