--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -6,10 +6,16 @@ $grey: #BABABA
     width: 100%
     position: relative
     background: url('../img/bg/header-bg.png') center center/cover no-repeat
+    &--other
+        background: rgba(223, 223, 223, .1)
+        height: 100%
     &__cover
         background: rgba(0, 0, 0, .32)
         width: 100%
         height: 100%
+        &--other
+            background: rgba(223, 223, 223, .1)
+            height: 100%
     &__container
         display: flex
         justify-content: space-between
@@ -42,33 +48,38 @@ $grey: #BABABA
     background: #fff
     align-items: center
     overflow: hidden    
+    &--vacancies
+        background: transparent
     &__humburger
         display: none
     &__mobile
         display: none
     &__list
         display: flex
-        height: 100%
-        li
-            list-style: none
-            font-size: 20px
-            padding: 9px 20px
-            transition: .3s ease
-            a
-                color: #000000
-            &:hover
-                cursor: pointer
-                background: $yellow
-                border-radius: 6px
-            &:not(:last-child)
-                margin-right: 5px
+        height: 100%            
     &__container
         display: flex
         justify-content: space-between
         align-items: center
+    &__item
+        list-style: none
+        font-size: 20px
+        padding: 9px 20px
+        transition: .3s ease
+        &--active
+            background: $yellow
+            border-radius: 6px
+        a
+            color: #000000
+        &:hover
+            cursor: pointer
+            background: $yellow
+            border-radius: 6px
+        &:not(:last-child)
+            margin-right: 5px
 .first-form
     padding: 30px 30px 30px 30px
-    margin-top: 200px
+    margin-top: 220px
     background: #ffffff
     border-radius: 15px
     display: flex
@@ -453,4 +464,144 @@ $grey: #BABABA
 
 .consult-form--footer
     margin-bottom: 80px
-    
+
+.vacancies-main
+    background: rgb(233, 233, 233)
+    padding-top: 60px
+    padding-bottom: 60px
+    &__title
+        margin-bottom: 35px
+.vacancies-block
+    display: grid
+    grid-template-columns: 350px 350px 350px
+    grid-gap: 50px 65px
+    margin-top: 40px
+    &__item
+        background: #ffffff
+        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3)
+        border-radius: 10px 10px 10px 10px
+    &__padding
+        padding: 20px
+    &__img
+        overflow: hidden
+        cursor: pointer
+        border-radius: 10px 10px 0 0
+        img
+            height: 160px
+            width: 100%
+            transition: 2s
+        &:hover
+            img
+                transform: scale(1.3)
+                transition: 6s ease-in-out
+    &__title
+        font-size: 20px
+        margin-bottom: 20px
+.vacancies-list
+    margin-bottom: 20px
+    &__item
+        margin-bottom: 7px
+    &__subtitle
+        font-size: 16px 
+        color: #000000
+    &__text
+        font-size: 16px
+        color: #808080
+.vacancies-buttons
+    display: flex
+    justify-content: space-between
+    &__info
+        border: 1px solid #000
+        padding: 11px 22px
+        max-width: 145px
+        border-radius: 6px
+        cursor: pointer
+        font-size: 15px
+    &__buy
+        max-width: 145px
+        border-radius: 6px
+        border: 1px solid #000
+        padding: 11px 22px
+        background: $yellow
+        cursor: pointer
+        font-size: 15px
+
+
+// Модальные окна 
+
+.modal
+    background: rgba(0, 0, 0, .6)
+    position: fixed
+    left: 0 
+    top: 0
+    height: 100vh
+    width: 100%
+    z-index: -1
+    opacity: 0
+    transition: .3s 
+.modal-block
+    width: 980px
+    position: fixed
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    padding: 40px 40px 40px 40px
+    background: #ffffff
+    border-radius: 25px
+    &__title
+        font-size: 24px
+    &__close
+        position: absolute
+        top: 20px 
+        right: 20px
+        cursor: pointer
+.modal-content
+    display: grid
+    grid-template-columns: 50% 50%
+    margin-top: 30px
+    height: max-content
+    &__list
+        margin-left: 15px
+    &__text
+        margin-left: 15px
+        height: 100%
+    &__img
+        display: flex
+        overflow: hidden
+        img
+            height: 400px
+            object-fit: cover
+            width: 100%
+        &--buy
+            img
+                height: 300px
+                width: 100%
+                object-fit: cover
+    &__buy
+        margin-top: auto
+        margin-left: auto
+    &__offer
+        margin-right: 15px
+    &__title
+        font-size: 24px
+        margin-top: 22px
+        margin-bottom: 20px
+    &__form
+        margin-left: 15px
+        display: flex
+        flex-direction: column
+    &__label
+        font-size: 18px
+        margin-bottom: 10px
+    &__input
+        height: 50px
+        font-size: 16px
+        border: 2px solid #000000
+        border-radius: 8px
+        padding: 14px 20px
+        margin-bottom: 16px
+    &__send
+        margin: 0 auto
+        padding: 11px 50px
+        max-width: 350px
+        text-align: center
