--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -266,7 +266,115 @@
     .consult-form
         &--footer
             margin-bottom: 50px
-    
+    .menu--vacancies
+        position: static
+        .menu__list
+            display: flex
+            overflow-x: auto
+            padding-bottom: 10px
+            &::-webkit-scrollbar
+                background-color: #d1d1d1
+                height: 6px
+            &::-webkit-scrollbar-thumb 
+                width: 100px
+                border-radius: 10px
+                background-color: #000
+            
+            .menu__item                    
+                padding: 6px 10px
+                a
+                    white-space: nowrap
+                    font-size: 14px
+    .vacancies-main
+        padding-top: 90px
+        &__title
+            margin-bottom: 20px
+    .vacancies-block
+        grid-template-columns: 1fr
+        grid-gap: 20px 15px
+        justify-content: space-around
+        &__item
+            min-width: 220px
+            max-width: 320px
+            margin: 0 auto
+        &__padding
+            padding: 12px
+        &__title
+            font-size: 16px
+        &__img
+            img
+                height: auto
+    .vacancies-list
+        margin-bottom: 10px
+        &__text
+            font-size: 12px
+        &__subtitle
+            font-size: 12px
+        &__item
+            margin-bottom: 5px
+    .vacancies-buttons__info,
+    .vacancies-buttons__buy
+        font-size: 12px
+        max-width: 130px
+        margin: 0 auto
+        margin: 4px 0
+        text-align: center
+        padding: 9px 14px
+    .modal-block
+        border-radius: 4px
+        width: 92%
+        overflow-y: scroll
+        max-width: 380px
+        padding: 20px
+        height: 90%
+        &__close
+            right: 14px
+            top: 14px
+        &__title
+            font-size: 20px
+            width: 90%
+        &__close
+            svg
+                width: 18px 
+                height: 18px
+    .modal-content
+        display: flex
+        flex-direction: column
+        overflow-y: scroll
+        &__img
+            img
+                height: 160px
+            &--buy
+                img
+                    height: 160px
+        &__text
+            margin-left: 0
+            margin-top: 16px
+        &__list
+            margin-left: 0
+        &__title
+            font-size: 18px
+            margin: 16px 0
+        &__label
+            font-size: 14px
+            margin-bottom: 6px
+        &__input
+            font-size: 14px
+            padding: 8px 10px
+            height: auto
+            margin-bottom: 12px
+        &__offer
+            margin-right: 0
+        &__form
+            margin-left: 0
+            margin-top: 20px
+        &__send
+            margin: 0 auto
+        &__buy
+            margin: 0 auto
+            margin-top: 6px
+
+
 @media screen and (min-width: 480px) and (max-width: 988px)
     .container
         width: 85%
@@ -486,6 +594,92 @@
     .consult-form
         &--footer
             margin-bottom: 50px
+    .menu--vacancies
+        .menu__list
+            display: flex
+            overflow-x: auto
+            padding-bottom: 10px
+            &::-webkit-scrollbar
+                background-color: #d1d1d1
+                height: 6px
+            &::-webkit-scrollbar-thumb 
+                width: 100px
+                border-radius: 10px
+                background-color: #000
+            
+            .menu__item                    
+                padding: 6px 10px
+                a
+                    white-space: nowrap
+                    font-size: 14px
+    .vacancies-block
+        grid-template-columns: 1fr 1fr
+        grid-gap: 20px 15px
+        justify-content: space-around
+        &__item
+            min-width: 220px
+        &__padding
+            padding: 12px
+        &__title
+            font-size: 16px
+        &__img
+            img
+                height: auto
+    .vacancies-list
+        margin-bottom: 10px
+        &__text
+            font-size: 12px
+        &__subtitle
+            font-size: 12px
+        &__item
+            margin-bottom: 5px
+    .vacancies-buttons
+        display: flex
+        flex-direction: column
+        align-items: center
+    .vacancies-buttons__info,
+    .vacancies-buttons__buy
+        font-size: 12px
+        max-width: 130px
+        margin: 0 auto
+        margin: 4px 0
+        text-align: center
+        padding: 9px 14px
+    .modal-block
+        width: 95%
+        max-width: 950px
+        padding: 20px
+        &__title
+            font-size: 24px
+        &__close
+            svg
+                width: 18px 
+                height: 18px
+    .modal-content
+        &__label
+            font-size: 16px
+            margin-bottom: 6px
+        &__input
+            font-size: 15px
+            padding: 12px 16px
+            height: auto
+
+
+@media screen and (min-width: 700px) and (max-width: 988px)
+    .vacancies-block
+        grid-template-columns: 300px 300px
+        grid-gap: 20px
+        justify-content: space-around
+        &__title
+            margin-bottom: 14px
+    .vacancies-buttons__info,
+    .vacancies-buttons__buy
+        font-size: 14px
+        max-width: 130px
+        padding: 9px 14px
+    .vacancies-list__subtitle,
+    .vacancies-list__text
+        font-size: 14px
 
     
 @media screen and (min-width: 989px) and (max-width: 1300px)
@@ -498,6 +692,8 @@
                 font-size: 18px
     .header
         height: 700px
+        &--other
+            height: 100%
         &__block
             margin-top: 40px
             max-width: 550px
@@ -629,6 +825,34 @@
                 font-size: 20px
         &__social
             grid-gap: 0 15px
+    .vacancies-block
+        grid-template-columns: 350px 350px 
+        grid-gap: auto
+        justify-content: space-around
+    .vacancies-list
+        &__text
+            font-size: 15px
+        &__subtitle
+            font-size: 15px
+    .modal-block
+        width: 95%
+        max-width: 950px
+        padding: 20px
+        &__title
+            font-size: 24px
+        &__close
+            svg
+                width: 18px 
+                height: 18px
+    .modal-content
+        &__label
+            font-size: 16px
+            margin-bottom: 6px
+        &__input
+            font-size: 15px
+            padding: 12px 16px
+            height: auto
+
 
 // @media screen and (min-width: 1200px) and (max-width: 1700px)
     
