--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -8,6 +8,8 @@
         font-size: 18px
     .header
         height: 100%
+        &--thanks
+            height: 100vh
         &__container
             width: 85%
             max-width: 85%
@@ -15,8 +17,13 @@
             flex-direction: column
         &__title
             font-size: 56px
+            &--thanks
+                font-size: 40px
+                width: 90%
         &__subtitle
             font-size: 18px
+            &--thanks
+                width: 90%
         &__social
             margin: 0 auto
             width: 300px
@@ -384,14 +391,20 @@
         font-size: 22px
     .header
         height: 100%
+        &--thanks
+            height: 100vh
         &__container
             width: 90%
             margin: 0 auto
             flex-direction: column
         &__title
             font-size: 70px
+            &--thanks
+                font-size: 60px
         &__subtitle
             font-size: 24px
+            &--thanks
+                font-size: 26px
         &__social
             li
                 svg
@@ -692,6 +705,8 @@
                 font-size: 18px
     .header
         height: 700px
+        &--thanks
+            height: 100vh
         &--other
             height: 100%
         &__block
