--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -70,7 +70,8 @@ $grey: #BABABA
         display: none
     &__list
         display: flex
-        height: 100%            
+        height: 100%   
+        align-items: center         
     &__container
         display: flex
         justify-content: space-between
@@ -107,12 +108,14 @@ $grey: #BABABA
         font-size: 20px
         margin-bottom: 16px
         width: max-content
+        width: 100%
     &__input
         border-radius: 8px
-        padding: 16px 20px
+        padding: 14px 20px
         width: 100%
         border: 2px solid #000
-        margin-bottom: 25px
+        margin-bottom: 20px
+        margin-top: 5px
     &__btn
         
     &__term
